--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <p class="descricao__texto">Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da tecnologia e aprender inglês ou espanhol, onde e como quiser.</p>
             <a href="www.alura.com.br" class="container__botao secundario__botao">Assinar o combo +</a>
         </div>
-            <img src="imagem/telas.png" alt="tela da alura plus e do alura lingua" class="secundario__imagem">
+            <img src="imagem/Telas.png" alt="tela da alura plus e do alura lingua" class="secundario__imagem">
 
         
          </section>
